--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ h2 {
   margin-top: 0 !important;
   flex: 0 0 auto;
 }
+
 .menu-principal {
   display: flex;
   flex-direction: column;
@@ -142,12 +143,6 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-.formulario {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-bottom: 20px;
 }
 
 .entrada-nota {
@@ -308,6 +303,25 @@ textarea.entrada-nota {
   margin-bottom: 25px;
 }
 
+.footer {
+  background-color: #d05273;
+  color: white;
+  margin-top: 30px;
+  margin-left: -25px;
+  margin-right: -25px;
+  margin-bottom: -25px;
+  padding: 20px 10px;
+  text-align: center;
+  border-radius: 0 0 60px 60px;
+}
+
+.footer p {
+  margin: 0;
+  color: #ffe5b4;
+  font-size: 0.85rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 @media (max-width: 600px) {
   .container {
     padding: 20px;
@@ -344,5 +358,12 @@ textarea.entrada-nota {
   button {
     font-size: 16px !important;
     min-height: 44px;
+  }
+
+  .footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-bottom: -20px;
+    border-radius: 0 0 30px 30px;
   }
 }
